[package]
name = "poly"
version = "0.1.0"
authors = ["l0calh05t <l0calh05t@gmx.net>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/l0calh05t/poly-rs.git"
description = "Generic dense polynomials"
keywords = ["numerics", "mathematics", "polynomials"]
categories = ["algorithms", "science", "data-structures"]

[dependencies]
smallvec = "1.4"
num = "0.2"
